syntax = "proto3";
package Order;
message Order {
string id = 1;
string name = 2;
string description = 3;
}


message SearchOrdersRequest {
string query = 1;
}
message SearchOrdersResponse {
repeated Order orders = 1;
}
message CreateRequest {
  string name = 2;
  string description = 3;
  }
  message CreateResponse {
  repeated Order order = 1;
  }
service OrderService {
rpc SearchOrders(SearchOrdersRequest) returns (SearchOrdersResponse);
rpc CreateOrder(CreateRequest) returns (CreateResponse);

}